introduced dutch language

--- a/src/main/resources/declarationoforigin/master_nl.properties
+++ b/src/main/resources/declarationoforigin/master_nl.properties
@@ -1,1 +1,15 @@
-footer.text = The exporter of the products covered by this document (customs authorisation number BE1000) declares that, except where otherwise clearly indicated, these products are of EU preferential origin.
+header.title.document = Verklaring van afkomst
+header.label.date = Datum
+header.label.page = Pagina
+
+section.label.reference = Onze bestellingsnummer:
+section.label.product_id = Product Id:
+section.label.product_description = Product Beschrijving:
+section.label.product_code = HS Code:
+section.label.description = Beschrijving
+section.label.quantity = Hoeveelheid
+section.label.producer_lot_nr = Producer Lot No:
+section.label.country_of_origin = Land van afkomst:
+section.label.customer_legal_address = Klant adres
+
+footer.text = De exporteur van de producten waarop dit document betrekking heeft (douaneautorisatienummer BE1000) verklaart dat deze producten, tenzij anderszins duidelijk aangegeven, van EU-preferentiële oorsprong zijn.
